# Slimmer_Deepak

./: CMakeLists.txt  controlMessage.c  controlMessage.h  main.c  set_pwm.c  set_pwm.h  uart.c  uart.h  uart_advanced.c  uart_defines.h  uart_handler.c  uart_handler.h
